--- a/CoffeeShopManager/GUI/GUI.csproj
+++ b/CoffeeShopManager/GUI/GUI.csproj
@@ -120,6 +120,7 @@
     <Compile Include="frmSmallAddStockItemToList.Designer.cs">
       <DependentUpon>frmSmallAddStockItemToList.cs</DependentUpon>
     </Compile>
+    <Compile Include="PDFPrinter.cs" />
     <Compile Include="Test.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -598,6 +599,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\hammer_96px.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\coffeecupicon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\coffeeflat.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
