Update email input error handling

--- a/CoffeeShopManager/GUI/GUI.csproj
+++ b/CoffeeShopManager/GUI/GUI.csproj
@@ -71,6 +71,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DataGridViewNumericUpDownCell.cs" />
+    <Compile Include="EmailHelper.cs" />
     <Compile Include="FilterProperties.cs" />
     <Compile Include="frmAddStockItem.cs">
       <SubType>Form</SubType>
