--- a/CoffeeShopManager/DAL/app.config
+++ b/CoffeeShopManager/DAL/app.config
@@ -8,7 +8,7 @@
     <applicationSettings>
         <DAL.Properties.Settings>
             <setting name="ConnectionString" serializeAs="String">
-                <value>Data Source=HDM-PC-DC54PLF;Initial Catalog=NewDB;Integrated Security=True</value>
+                <value>Data Source=DESKTOP-14KFC4R\SQLEXPRESS; Initial Catalog=GUI4; User id=sa;Password=123456;</value>
             </setting>
         </DAL.Properties.Settings>
     </applicationSettings>
