--- a/CoffeeShopManager/DAL/app.config
+++ b/CoffeeShopManager/DAL/app.config
@@ -8,7 +8,7 @@
     <applicationSettings>
         <DAL.Properties.Settings>
             <setting name="ConnectionString" serializeAs="String">
-                <value>Data Source=localhost;Initial Catalog=NewDB;User Id=sa;Password=onetwothree;MultipleActiveResultSets=true;</value>
+                <value>Data Source=localhost;Initial Catalog=NewDB;Integrated Security=True</value>
             </setting>
         </DAL.Properties.Settings>
     </applicationSettings>
