--- a/CoffeeShopManager/DAL/Properties/Settings.settings
+++ b/CoffeeShopManager/DAL/Properties/Settings.settings
@@ -3,7 +3,7 @@
   <Profiles />
   <Settings>
     <Setting Name="ConnectionString" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">Data Source=localhost;Initial Catalog=NewDB;User Id=sa;Password=onetwothree;MultipleActiveResultSets=true;</Value>
+      <Value Profile="(Default)">Data Source=localhost;Initial Catalog=NewDB;Integrated Security=True</Value>
     </Setting>
   </Settings>
 </SettingsFile>
