Update DAL and BUS for Stats feature

--- a/CoffeeShopManager/DAL/app.config
+++ b/CoffeeShopManager/DAL/app.config
@@ -10,6 +10,15 @@
             <setting name="ConnectionString" serializeAs="String">
                 <value>Data Source=DESKTOP-14KFC4R\SQLEXPRESS; Initial Catalog=NewDB; User id=sa;Password=123456;</value>
             </setting>
+            <setting name="ConnectionStringLong" serializeAs="String">
+                <value>Data Source=localhost; Initial Catalog=NewDB; User id=sa;Password=onetwothree;MultipleActiveResultSets=True;</value>
+            </setting>
+            <setting name="ConnectionStringHao" serializeAs="String">
+                <value>Data Source=HDM-PC-DC54PLF;Initial Catalog=NewDB;Integrated Security=True;MultipleActiveResultSets=True;</value>
+            </setting>
+            <setting name="ConnectionStringCuong" serializeAs="String">
+                <value>Data Source=DESKTOP-14KFC4R\SQLEXPRESS; Initial Catalog=NewDB; User id=sa;Password=123456;MultipleActiveResultSets=True;</value>
+            </setting>
         </DAL.Properties.Settings>
     </applicationSettings>
 </configuration>
