--- a/CoffeeShopManager/GUI/GUI.csproj
+++ b/CoffeeShopManager/GUI/GUI.csproj
@@ -64,7 +64,7 @@
     <ManifestKeyFile>GUI_TemporaryKey.pfx</ManifestKeyFile>
   </PropertyGroup>
   <PropertyGroup>
-    <SignManifests>true</SignManifests>
+    <SignManifests>false</SignManifests>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="BouncyCastle.Crypto, Version=1.8.6.0, Culture=neutral, PublicKeyToken=0e99375e54769942">
@@ -130,6 +130,12 @@
     </Compile>
     <Compile Include="frmOrderForTable.Designer.cs">
       <DependentUpon>frmOrderForTable.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frmRestoreEmployee.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmRestoreEmployee.Designer.cs">
+      <DependentUpon>frmRestoreEmployee.cs</DependentUpon>
     </Compile>
     <Compile Include="frmRestoreProduct.cs">
       <SubType>Form</SubType>
@@ -446,6 +452,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmRegister.vi-VN.resx">
       <DependentUpon>frmRegister.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmRestoreEmployee.resx">
+      <DependentUpon>frmRestoreEmployee.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmRestoreProduct.resx">
       <DependentUpon>frmRestoreProduct.cs</DependentUpon>
@@ -783,6 +792,9 @@
       <ProductName>.NET Framework 3.5 SP1</ProductName>
       <Install>false</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\warning.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
