--- a/CoffeeShopManager/GUI/App.config
+++ b/CoffeeShopManager/GUI/App.config
@@ -7,6 +7,7 @@
   </configSections>
   <connectionStrings>
     <add name="GUI.Properties.Settings.ConnectionString" connectionString="Data Source=localhost; Initial Catalog=NewDB; User id=sa;Password=onetwothree;MultipleActiveResultSets=True;" />
+    <add name="GUI.Properties.Settings.ConnectionStringCuong" connectionString="Server=10.0.131.2\SQLEXPRESS,1433;Database=NewDB;User ID=sa;Password=123456;MultipleActiveResultSets=True;" />
   </connectionStrings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
