Update print in receipt details and a few other things

--- a/CoffeeShopManager/GUI/GUI.csproj
+++ b/CoffeeShopManager/GUI/GUI.csproj
@@ -536,6 +536,9 @@
     <EmbeddedResource Include="UserControlManagerReceiptsTab.vi-VN.resx">
       <DependentUpon>UserControlManagerReceiptsTab.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="UserControlManagerReceiptsTab.vi.resx">
+      <DependentUpon>UserControlManagerReceiptsTab.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="UserControlManagerShopInfo.resx">
       <DependentUpon>UserControlManagerShopInfo.cs</DependentUpon>
     </EmbeddedResource>
