--- a/CoffeeShopManager/GUI/App.config
+++ b/CoffeeShopManager/GUI/App.config
@@ -7,6 +7,8 @@
   </configSections>
   <connectionStrings>
     <add name="GUI.Properties.Settings.ConnectionString" connectionString="Data Source=localhost; Initial Catalog=NewDB; User id=sa;Password=onetwothree;MultipleActiveResultSets=True;" />
+    <add name="GUI.Properties.Settings.ConnectionStringHao" connectionString="Data Source=HDM-PC-DC54PLF;Initial Catalog=NewDB;Integrated Security=True;"
+      providerName="" />
   </connectionStrings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
