--- a/CoffeeShopManager/GUI/Properties/Settings.settings
+++ b/CoffeeShopManager/GUI/Properties/Settings.settings
@@ -3,7 +3,7 @@
   <Profiles />
   <Settings>
     <Setting Name="ReceiptSaveFileLocation" Type="System.String" Scope="User">
-      <Value Profile="(Default)">0</Value>
+      <Value Profile="(Default)" />
     </Setting>
     <Setting Name="ConnectionString" Type="(Connection string)" Scope="Application">
       <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
@@ -16,9 +16,11 @@
       <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
 &lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
   &lt;ConnectionString&gt;Data Source=HDM-PC-DC54PLF;Initial Catalog=NewDB;Integrated Security=True;&lt;/ConnectionString&gt;
-  &lt;ProviderName /&gt;
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
       <Value Profile="(Default)">Data Source=HDM-PC-DC54PLF;Initial Catalog=NewDB;Integrated Security=True;</Value>
+    </Setting>
+    <Setting Name="ConnStr" Type="System.String" Scope="User">
+      <Value Profile="(Default)">Server=10.0.131.2\SQLEXPRESS,1433;Database=NewDB;User ID=sa;Password=123456;MultipleActiveResultSets=True;</Value>
     </Setting>
   </Settings>
 </SettingsFile>
