--- a/CoffeeShopManager/GUI/App.config
+++ b/CoffeeShopManager/GUI/App.config
@@ -7,8 +7,7 @@
   </configSections>
   <connectionStrings>
     <add name="GUI.Properties.Settings.ConnectionString" connectionString="Data Source=localhost; Initial Catalog=NewDB; User id=sa;Password=onetwothree;MultipleActiveResultSets=True;" />
-    <add name="GUI.Properties.Settings.ConnectionStringHao" connectionString="Data Source=HDM-PC-DC54PLF;Initial Catalog=NewDB;Integrated Security=True;"
-      providerName="" />
+    <add name="GUI.Properties.Settings.ConnectionStringHao" connectionString="Data Source=HDM-PC-DC54PLF;Initial Catalog=NewDB;Integrated Security=True;" />
   </connectionStrings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
@@ -16,7 +15,7 @@
   <userSettings>
     <GUI.Properties.Settings>
       <setting name="ReceiptSaveFileLocation" serializeAs="String">
-        <value>0</value>
+        <value />
       </setting>
       <setting name="ConnStr" serializeAs="String">
         <value>Server=10.0.131.2\SQLEXPRESS,1433;Database=NewDB;User ID=sa;Password=123456;MultipleActiveResultSets=True;</value>
