--- a/CoffeeShopManager/GUI/Properties/Settings.settings
+++ b/CoffeeShopManager/GUI/Properties/Settings.settings
@@ -22,5 +22,12 @@
     <Setting Name="ConnStr" Type="System.String" Scope="User">
       <Value Profile="(Default)">Server=10.0.131.2\SQLEXPRESS,1433;Database=NewDB;User ID=sa;Password=123456;MultipleActiveResultSets=True;</Value>
     </Setting>
+    <Setting Name="ConnectionStringL" Type="(Connection string)" Scope="Application">
+      <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
+&lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
+  &lt;ConnectionString&gt;Data Source=localhost; Initial Catalog=NewDB; User id=sa;Password=onetwothree;MultipleActiveResultSets=True;&lt;/ConnectionString&gt;
+&lt;/SerializableConnectionString&gt;</DesignTimeValue>
+      <Value Profile="(Default)">Data Source=localhost; Initial Catalog=NewDB; User id=sa;Password=onetwothree;MultipleActiveResultSets=True;</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
