Connection string and small adjustments

--- a/CoffeeShopManager/GUI/App.config
+++ b/CoffeeShopManager/GUI/App.config
@@ -6,7 +6,7 @@
     </sectionGroup>
   </configSections>
   <connectionStrings>
-    <add name="GUI.Properties.Settings.ConnectionString" connectionString="Server=10.0.131.2\SQLEXPRESS,1433;Database=NewDB;User ID=sa;Password=123456;MultipleActiveResultSets=True;" />
+    <add name="GUI.Properties.Settings.ConnectionString" connectionString="Server=localhost,1433;Database=NewDB;User ID=sa;Password=onetwothree;MultipleActiveResultSets=True;" />
   </connectionStrings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
